# second_brain

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
deploy/systemd/: second-brain-sync.service  second-brain-sync.timer  second-brain.service
docs/: ARCHITECTURE.md  DEPLOY.md  FORMAT.md
examples/2026/07/: 20260702T010011-7944-idea-capturar-conocimiento-sin-friccion-producto-vision.md  20260702T010026-15e7-example-com.md  20260702T010028-01b2-captura-de-prueba-ocr.md
scripts/: install.sh
src/second_brain/: __init__.py  ai.py  cli.py  config.py  models.py  pipeline.py  report.py
src/second_brain/enrich/: __init__.py  enricher.py  knowledge_model.py  relations.py  suggestions.py
src/second_brain/index/: __init__.py  sqlite_index.py
src/second_brain/processors/: __init__.py  audio.py  file.py  image.py  pdf.py  text.py
src/second_brain/processors/url/: __init__.py  base.py  linkedin.py  twitter.py  web.py  youtube.py
src/second_brain/sources/: __init__.py  telegram.py
src/second_brain/storage/: __init__.py  library.py  markdown.py
tests/: conftest.py  test_enrichment.py  test_index.py  test_library.py  test_markdown.py  test_pipeline.py  test_suggestions.py  test_url_detect.py  test_v11_features.py
