[project]
name = "second-brain"
version = "1.4.0"
description = "Biblioteca documental personal: captura desde Telegram a Markdown"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[job-queue]>=21.0",
    "pypdf>=4.0",
    "trafilatura>=1.8",
    "httpx>=0.27",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "Pillow>=10.0",
    "pytesseract>=0.3.10",
    "anthropic>=0.40",
    "openai>=1.40",
    "youtube-transcript-api>=0.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
second-brain = "second_brain.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
